base-pwndrop/pwndrop.tf
# Configure the AWS Provider
provider "aws" {
  region = "us-east-2"
}

data "aws_ami" "ubuntu" {
  most_recent = "true"
  owners      = ["aws-marketplace"]

  filter {
    name   = "name"
    values = ["f991a988-22fb-4c72-a790-09e227224ea5.3b73ef49-208f-47e1-8a6e-4ae768d8a333.DC0001"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}



# Put your IP here to whitelist it for ssh

variable "access_addr" {
    type    = string
    default = "0.0.0.0/0"

}

resource "aws_security_group" "pwndrop_group" {
  name        = "pwndrop_group"
  description = "Allow Ports for pwndrop and SSH access"

  # Open the default WebDav/HTTP Port
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  # Open the default HTTPS Port
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Open the default DNS Port
  ingress {
    from_port   = 53
    to_port     = 53
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # ssh for remote access, might want to lock down to your IP prior to rolling out
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.access_addr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "primary_pwndrop" {
  ami             = data.aws_ami.ubuntu.id
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.pwndrop_group.name]
  key_name        = "primary-c2-key"


  tags = {
    Name = "Primary pwndrop"
  }
}

output "IP" {
  value = aws_instance.primary_pwndrop.public_ip
}
